--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,10 +9,10 @@
 <div class="row">
   <div class="col-lg-4">
      <h3 class="midrow">
-         View Recipes as a Guest User
+       View Recipes as a Guest User
      </h3>   
     <h2 class="left">Browse and view recipes as a guest and Sign up later</h2>
-    <p><%= link_to "Browse Recipe listings", "", class: "btn btn-warning btn-small" %></p>
+    <p><%= link_to "Browse Recipe listings", recipes_path, class: "btn btn-warning btn-small" %></p>
  </div>
  <div class="col-lg-4">
      <h3 class="midrow">
@@ -20,7 +20,8 @@
      </h3>   
     <h2 class="left">Browse and view recipes as a guest and Sign up later</h2>
     <p><%= link_to "Browse Recipe listings", "", class: "btn btn-warning btn-small" %></p>
- </div><div class="col-lg-4">
+ </div>
+ <div class="col-lg-4">
      <h3 class="midrow">
          View Recipes as a Guest User
      </h3>   
