--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -84,6 +84,16 @@ input, textarea, select, .uneditablr-input {
 }
 
 input {
-  heoght: auto !important;
+  height: auto !important;
 }
 
+span picture {
+  margin-top: 10px;
+  input{
+    border: 0;
+  }
+}  
+
+.show_recipe{
+  margin: 10px 10px 10px 10px;
+}
