--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,12 +1,33 @@
 <header class="navbar navbar-fixed-top navbar-default">
-    <div class="container">
-      <%= link_to "myRecipes", root_path, class: "btn btn-lg btn-success", id:
-      "logo" %>
+  <div class="container">
+    <%= link_to "myRecipes", root_path, class: "btn btn-lg btn-success", id: "logo" %>
+     <div class="nav_item">
+     <%= link_to "link 1", "", class: "btn btn-default btn-warning" %>
+  </div>
+  <div class="nav_item">
+    <%= link_to "link 1", "", class: "btn btn-default btn-warning" %>
+  </div>
+  <%if logged_in? %> 
+    <div class="nav_item">
+      <%= link_to "New recipe", new_recipe_path, class: "btn btn-default btn-warning" %>
+    </div>
+    <ul class="nav_item">
+      <li class="dropdown">
+       <%= link_to '#', class: "btn btn-defolt btn-danger dropdown-toggle", 'data-toggle' => "dropdown" do %>
+         <%= currant_user.chefname %> <b class="caret"></b>
+         <% end %>
+         <ul class="dropdown-menu">
+           <li><%= link_to "View Profile", chef_path(current_user)%></li>
+           <li><%= link_to "Edit Profile", edit_chef_path(current_user) %></li>
+           <li class="divider"></li>
+           <li><%= link_to "logout", logout_path %></li>
+         </ul>
+       </li>
+      </ul>
+     <% else %>
        <div class="nav_item">
-      <%= link_to "link 1", "", class: "btn btn-default btn-warning" %></div>
-       <div class="nav_item">
-      <%= link_to "link 1", "", class: "btn btn-default btn-warning" %></div>
-       <div class="nav_item">
-      <%= link_to "New recipe", new_recipe_path, class: "btn btn-default btn-warning" %></div>
-   </div>
+         <%= link_to "Log in", login_path, class: "btn btn-default btn-success" %>
+       </div>
+     <% end %>
+  </div>
 </header>
