--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,23 +3,21 @@
 
     <h2> This is the home page for the Professional Ruby on Rails Developer course on Udemy</h2>
 
-<%= link_to "Sign up now", "", class: "btn btn-lg btn-success" %>
+<%= link_to "Sign up now", register_path, class: "btn btn-lg btn-success" %>
 </div>
-
 <div class="row">
   <div class="col-lg-4">
      <h3 class="midrow">
        View Recipes as a Guest User
      </h3>   
     <h2 class="left">Browse and view recipes as a guest and Sign up later</h2>
-    <p><%= link_to "Browse Recipe listings", recipes_path, class: "btn btn-warning btn-small" %></p>
+    <p><%= link_to "Log in to your account", "", recipes_path, class: "btn btn-warning btn-small" %></p>
  </div>
  <div class="col-lg-4">
      <h3 class="midrow">
-         View Recipes as a Guest User
+         Sign in to your account
      </h3>   
-    <h2 class="left">Browse and view recipes as a guest and Sign up later</h2>
-    <p><%= link_to "Browse Recipe listings", "", class: "btn btn-warning btn-small" %></p>
+    <h2 class="left">Add/update your recipes/create rewiews/like-dislike recipes and much much more!</h2>
  </div>
  <div class="col-lg-4">
      <h3 class="midrow">
