fixed server issues

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,10 +2,10 @@
 
 <ul class="nav nav-tabs">
   <li class='active'>
-    <%= <link_to "Recipes", recipes_path %>
+    <%= link_to "Recipes", recipes_path %>
   </li>
   <li>
-    <% link_to "Chefs", chefs_path %>
+    <%= link_to "Chefs", chefs_path %>
   </li>
 </ul>
 
@@ -27,7 +27,7 @@
       <p>
         <span class='quiet'><small> created: <%= time_ago_in_words(recipe.created_at) %> ago, </small></span>
         <span class='quiet'><small> updated: <%= time_ago_in_words(recipe.updated_at) %> ago</small></span>
-        </p>
+      </p>
          <div class="pull-right"
       <%= link_to like_recipe_path(recipe, like: true), method: :post do %>
          <i class="glyphicon glyphicon-thumbs-up"></i> &nbsp <%= recipe.thumbs_up_total %>
