--- a/app/views/chefs/_form.html.erb
+++ b/app/views/chefs/_form.html.erb
@@ -12,7 +12,7 @@
       <%= f.label :password %>
       <%= f.password_field :password %>
       
-      <%= f.submit(@chefname.new_record? ? 'Register' : 'Edit profile', class: "btn btn-success") %>
+      <%= f.submit(@chefname.new_record? 'Register' : 'Edit profile', class: "btn btn-success") %>
     <% end %>
   </div>
 </div>
