--- a/app/views/logins/new.html.erb
+++ b/app/views/logins/new.html.erb
@@ -5,7 +5,7 @@
     <%= form_tag '/login' do %>
 
       <%= label_tag :email %>
-      <%+ text_field_tag :email %>
+      <%= text_field_tag :email %>
       
       <%= label_tag :password %>
       <%= password_field_tag :password %>
