--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,7 +12,7 @@ $navbar-default-color: $light-orange;
   float: left;
   margin-right: 10px;
   font-size: 2em;
-  color: #fff;
+  color: #040D71;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
