--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -10,12 +10,14 @@
   <div class="col-md-8">
     <% if logged_in? and @recipe.chef == current_user %>
      <%= link_to "Edit this recipe", edit_recipe_path(@recipe), class: "btn btn-success pull-right" %>
-    <% end %>chef
+    <% end %>
     <h3><%= @recipe.summary %></h3>
     <div class="show_recipe">
       <%= image_tag(@recipe.picture.url, class: "gravatar") if @recipe.picture? %>
     </div>
     <div class="well">
+        <p>Styles: <%= render @recipe.styles%></p>
+    <p>Ingredients: <%= render @recipe.ingredients%></p>
       <p>
         <strong>Steps:</strong>
       </p>
