--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -5,8 +5,8 @@
 <div class="row">
   <div class="well col-md-8 col-md-offset-2">
     <%= form_for @ingredient do |f| %>
-    <%+ f.label :name %>
-    <%= f.text.field :name %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
    
     <%= f.submit 'Create Ingredient', class: "btn btn-success" %>
   <% end %>
