--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-4 pull-right center">
     <%= link_to gravatar_for(@recipe.chef, size: 200), chef_path(@recipe.chef) %>
     <p>
-      <h5>Brought to you by: <%= @recipe.chef.chefname %></h5>
+      <h5>Created by: <%= @recipe.chef.chefname %></h5>
     </p>
   </div>
   <div class="col-md-8">
@@ -16,8 +16,8 @@
       <%= image_tag(@recipe.picture.url, class: "gravatar") if @recipe.picture? %>
     </div>
     <div class="well">
-        <p>Styles: <%= render @recipe.styles%></p>
-    <p>Ingredients: <%= render @recipe.ingredients%></p>
+    <p><strong>Styles:</strong> <%= render @recipe.styles %></p><br>
+    <p><strong>Ingredients:</strong> <%= render @recipe.ingredients %></p>
       <p>
         <strong>Steps:</strong>
       </p>
