--- a/app/views/styles/_style.html.erb
+++ b/app/views/styles/_style.html.erb
@@ -1,1 +1,1 @@
-<span class="quiet"> created: <%= link_to style.name, style_path(style) %> ago </span>
+<span class='quiet'><br><%= link_to style.name, style_path(style) %><br></span>
